--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "age_calculate_app",
+  "homepage": "https://Amirmohamadhejazi.github.io/age_calculate_app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build", 
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.3.1"
   }
 }
